--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="card" onclick="">
        <div class="imgBx" onclick="">
-           <img src="/imagenes/pamelita2.jpeg" alt="pamela">
+           <img src="imagenes/pamelita2.jpeg" alt="pamela">
        </div>
        <div class="content" onclick="">
            <div class="details" onclick="">
