--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>Carta - animada</title>
 </head>
-<body>
+<body onclick="">
    <div class="card" onclick="">
        <div class="imgBx" onclick="">
            <img src="imagenes/pamelita2.jpeg" alt="pamela">
